<resources>
    <string name="app_name">Board Game Scores</string>
    <string name="action_settings">Settings</string>
    <string name="games">Games</string>
    <string name="players">Players</string>
    <string name="statistics">Statistics</string>
    <string name="others">Others</string>
    <string name="game_name">Game of name</string>
    <string name="game_description">Description</string>
    <string name="submit">Submit</string>
    <string name="player_name">Name</string>
    <string name="player_surname">Surname</string>
    <string name="nickname">Nickname</string>
    <string name="error_in_input_game">Attention</string>
    <string name="error_in_input_player">Attention</string>
</resources>
