<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginTop="8pt"
        android:text="@string/game_name"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/game_of_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:lines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginTop="8pt"
        android:text="@string/game_description"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/game_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:layout_marginRight="8pt"
        android:lines="4" />

    <Button
        android:id="@+id/game_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8pt"
        android:background="@color/colorAccent"
        android:text="@string/submit" />

</LinearLayout>